refactor(project): Clean up project structure and consolidate OPFS testing
- Remove deprecated test2 directory and related files
- Delete obsolete configuration files (vite.config.opfs-async-proxy.ts, vitest.debug.config.ts)
- Rename vitest.config.ts to vitest.unit.config.ts for clarity
- Move documentation files to docs/development/ directory
- Add comprehensive OPFS async proxy E2E tests in src/jswasm/vfs/opfs/
- Update package.json and tsconfig.json configurations
- Remove pnpm-workspace.yaml as workspace management is consolidated
- Clean up .trae/documents directory
- Enhance vitest.e2e.config.ts to support new test structure

This refactoring improves project organization by consolidating testing
infrastructure, removing obsolete files, and establishing clear separation
between unit tests (vitest.unit.config.ts) and E2E tests (vitest.e2e.config.ts).

--- a/package.json
+++ b/package.json
@@ -13,14 +13,9 @@
     },
     "scripts": {
         "build": "vite build --watch",
-        "test": "vitest run --config vitest.config.ts",
+        "test": "npm run test:unit ; npm run test:e2e",
+        "test:uint": "vitest run --config vitest.config.ts",
         "test:e2e": "vitest run --config vitest.e2e.config.ts",
-        "test:ui": "vitest --ui --config tests/vitest.config.ts",
-        "test:legacy": "pnpm --filter @wuchuheng/web-sqlite-tests exec vite --port 50001 --host 0.0.0.0",
-        "test:browser": "vitest run --config vitest.debug.config.ts",
-        "build:opfs:async-proxy": "vite build -c vite.config.opfs-async-proxy.ts",
-        "test:unit": "vitest run",
-        "test:unit:watch": "vitest",
         "typecheck:watch": "tsc --watch -p tsconfig.json",
         "typecheck:migration:watch": "tsc --watch -p tsconfig.migration.json",
         "build:migration": "tsc -p tsconfig.migration.json",
