test(config): Standardize unit test configuration with Vitest
- Update vitest.unit.config.ts to explicitly include src/**/*.unit.test.ts pattern
- Align package.json test scripts with unified test configuration
- Separate unit tests (vitest.unit.config.ts) from E2E tests (vitest.e2e.config.ts)
- Ensure test:unit command targets only unit test files with .unit.test.ts suffix

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "scripts": {
         "build": "vite build --watch",
         "test": "npm run test:unit ; npm run test:e2e",
-        "test:uint": "vitest run --config vitest.config.ts",
+        "test:unit": "vitest run --config vitest.unit.config.ts",
         "test:e2e": "vitest run --config vitest.e2e.config.ts",
         "typecheck:watch": "tsc --watch -p tsconfig.json",
         "typecheck:migration:watch": "tsc --watch -p tsconfig.migration.json",
