refactor(opfs): migrate sqlite3-opfs-async-proxy to TypeScript
- Convert `sqlite3-opfs-async-proxy.js` to TypeScript and move to `sqlite3-opfs-async-proxy/` directory.
- Move and update end-to-end tests to `sqlite3-opfs-async-proxy/` folder.
- Update OPFS installer (`index.mjs`) to support the new structure.
- Update TypeScript migration configuration (`tsconfig.migration.json`).
- Update relevant documentation and migration guides.

--- a/tsconfig.migration.json
+++ b/tsconfig.migration.json
@@ -46,6 +46,7 @@
         "src/jswasm/vfs/opfs/async-proxy/state/*.ts",
         "src/jswasm/vfs/opfs/async-proxy/state/types.d.ts",
         "src/jswasm/vfs/opfs/async-proxy/sync-handle-error/*.ts",
+        "src/jswasm/vfs/opfs/sqlite3-opfs-async-proxy/*.ts",
         "src/types/global.d.ts"
     ],
     "exclude": ["src/**/*.test.ts"]
