refactor(opfs): Migrate config-setup to TypeScript and revamp documentation
- **Refactor OPFS Installer**:
  - Migrate `config-setup` core module from JavaScript to TypeScript (`config-setup.ts`).
  - Add comprehensive unit tests for configuration setup logic.
  - Remove obsolete `config-setup.mjs` and associated type definitions.
  - Update `sqlite3-opfs-async-proxy` and `opfs-vfs-installer` types.

- **Documentation Updates**:
  - Update extensive API references (Main, Database, Statement, Worker) in `repowiki`.
  - Refine Core Architecture and Storage System documentation (OPFS Integration, VFS).
  - Add development docs for config setup migration and test plans.

- **Configuration & Testing**:
  - Update project configuration (`tsconfig.json`, `eslint.config.mts`, `package.json`).
  - Enhance E2E tests for prepared statements and worker verification.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,16 +3,8 @@
         "target": "ES2022",
         "useDefineForClassFields": true,
         "module": "ESNext",
-        "lib": [
-            "ES2022",
-            "DOM",
-            "DOM.Iterable",
-            "WebWorker"
-        ],
-        "types": [
-            "vite/client",
-            "node"
-        ],
+        "lib": ["ES2022", "DOM", "DOM.Iterable", "WebWorker"],
+        "types": ["vite/client", "node"],
         "skipLibCheck": true,
         /* Bundler mode */
         "moduleResolution": "bundler",
