--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "scripts": {
         "build": "vite build --watch",
         "test": "npm run test:unit ; npm run test:e2e",
-        "test:unit": "vitest run --config vitest.unit.config.ts",
+        "test:unit": "vitest run --config vitest.unit.config.ts --coverage",
         "test:e2e": "vitest run --config vitest.e2e.config.ts",
         "typecheck:watch": "tsc --watch -p tsconfig.json",
         "typecheck:migration:watch": "tsc --watch -p tsconfig.migration.json",
@@ -42,6 +42,7 @@
         "@types/node": "^24.7.1",
         "@vitest/browser": "^4.0.14",
         "@vitest/browser-playwright": "^4.0.15",
+        "@vitest/coverage-v8": "4.0.15",
         "@vitest/ui": "^4.0.14",
         "@wuchuheng/helper": "^1.3.0",
         "commander": "^14.0.1",
