--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "build": "vite build --watch",
         "test": "npm run test:unit ; npm run test:e2e",
         "test:unit": "vitest run --config vitest.unit.config.ts --coverage",
-        "test:e2e": "vitest run --config vitest.e2e.config.ts",
+        "test:e2e": "vitest run --config vitest.e2e.config.ts --coverage",
         "typecheck:watch": "tsc --watch -p tsconfig.json",
         "typecheck:migration:watch": "tsc --watch -p tsconfig.migration.json",
         "build:migration": "tsc -p tsconfig.migration.json",
@@ -40,10 +40,10 @@
     "devDependencies": {
         "@eslint/js": "^9.37.0",
         "@types/node": "^24.7.1",
-        "@vitest/browser": "^4.0.14",
+        "@vitest/browser": "^4.0.15",
         "@vitest/browser-playwright": "^4.0.15",
         "@vitest/coverage-v8": "4.0.15",
-        "@vitest/ui": "^4.0.14",
+        "@vitest/ui": "^4.0.15",
         "@wuchuheng/helper": "^1.3.0",
         "commander": "^14.0.1",
         "eslint": "^9.37.0",
@@ -57,6 +57,6 @@
         "vite": "^7.1.10",
         "vite-plugin-dts": "^4.5.4",
         "vitepress": "^1.5.0",
-        "vitest": "^4.0.14"
+        "vitest": "^4.0.15"
     }
 }
