refactor(vfs/opfs): Migrate operation-runner to TypeScript implementation   - Add migration spec document for operation-runner   - Convert operation-runner from .mjs/.d.ts to .ts implementation   - Add unit test for the TypeScript operation-runner   - Update index.mjs to use the new TypeScript operation-runner   - Update tsconfig.migration.json to include the new files

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "build": "vite build --watch",
         "test": "npm run test:unit ; npm run test:e2e",
         "test:unit": "vitest run --config vitest.unit.config.ts --coverage",
-        "test:e2e": "vitest run --config vitest.e2e.config.ts --coverage",
+        "test:e2e": "vitest run --config vitest.e2e.config.ts",
         "typecheck:watch": "tsc --watch -p tsconfig.json",
         "typecheck:migration:watch": "tsc --watch -p tsconfig.migration.json",
         "build:migration": "tsc -p tsconfig.migration.json",
