--- a/tsconfig.migration.json
+++ b/tsconfig.migration.json
@@ -47,8 +47,11 @@
         "src/jswasm/vfs/opfs/async-proxy/state/types.d.ts",
         "src/jswasm/vfs/opfs/async-proxy/sync-handle-error/*.ts",
         "src/jswasm/vfs/opfs/installer/core/config-setup/*.ts",
+        "src/jswasm/vfs/opfs/installer/core/operation-runner/*.ts",
         "src/jswasm/vfs/opfs/sqlite3-opfs-async-proxy/*.ts",
         "src/types/global.d.ts"
     ],
-    "exclude": ["src/**/*.test.ts"]
+    "exclude": [
+        "src/**/*.test.ts"
+    ]
 }
