refactor(vfs-opfs-installer): Migrate serialization module from JavaScript to TypeScript
- Create docs/development/serialization-migration-spec.md for migration plan
- Migrate src/jswasm/vfs/opfs/installer/core/serialization to TypeScript
- Update src/jswasm/vfs/opfs/installer/core/operation-runner/operation-runner.unit.test.ts to use TypeScript module
- Update tsconfig.migration.json to include new TypeScript module path

--- a/tsconfig.migration.json
+++ b/tsconfig.migration.json
@@ -48,6 +48,7 @@
         "src/jswasm/vfs/opfs/async-proxy/sync-handle-error/*.ts",
         "src/jswasm/vfs/opfs/installer/core/config-setup/*.ts",
         "src/jswasm/vfs/opfs/installer/core/operation-runner/*.ts",
+        "src/jswasm/vfs/opfs/installer/core/serialization/*.ts",
         "src/jswasm/vfs/opfs/sqlite3-opfs-async-proxy/*.ts",
         "src/types/global.d.ts"
     ],
