--- a/tsconfig.migration.json
+++ b/tsconfig.migration.json
@@ -50,10 +50,9 @@
         "src/jswasm/vfs/opfs/installer/core/operation-runner/*.ts",
         "src/jswasm/vfs/opfs/installer/core/serialization/*.ts",
         "src/jswasm/vfs/opfs/installer/core/state-initialization/*.ts",
+        "src/jswasm/vfs/opfs/installer/utils/sanity-check/*.ts",
         "src/jswasm/vfs/opfs/sqlite3-opfs-async-proxy/*.ts",
         "src/types/global.d.ts"
     ],
-    "exclude": [
-        "src/**/*.test.ts"
-    ]
+    "exclude": ["src/**/*.test.ts"]
 }
