refactor(vfs/opfs/util): Migrate opfs-util module to TypeScript
- Convert src/jswasm/vfs/opfs/installer/utils/opfs-util/opfs-util.ts from JavaScript to TypeScript
- Add full TypeScript interfaces for OpfsUtilDeps, TreeListEntry, OpfsUtilInterface, and related types
- Implement createOpfsUtil with proper TypeScript type checking
- Update tsconfig.migration.json to include the new TypeScript file

This migration enhances type safety and maintainability for the OPFS filesystem utilities.

--- a/tsconfig.migration.json
+++ b/tsconfig.migration.json
@@ -52,7 +52,10 @@
         "src/jswasm/vfs/opfs/installer/core/state-initialization/*.ts",
         "src/jswasm/vfs/opfs/installer/utils/sanity-check/*.ts",
         "src/jswasm/vfs/opfs/sqlite3-opfs-async-proxy/*.ts",
+        "src/jswasm/vfs/opfs/installer/utils/opfs-util/opfs-util.ts",
         "src/types/global.d.ts"
     ],
-    "exclude": ["src/**/*.test.ts"]
+    "exclude": [
+        "src/**/*.test.ts"
+    ]
 }
