--- a/tsconfig.migration.json
+++ b/tsconfig.migration.json
@@ -53,9 +53,8 @@
         "src/jswasm/vfs/opfs/installer/utils/sanity-check/*.ts",
         "src/jswasm/vfs/opfs/sqlite3-opfs-async-proxy/*.ts",
         "src/jswasm/vfs/opfs/installer/utils/opfs-util/opfs-util.ts",
+        "src/jswasm/vfs/opfs/installer/wrappers/io-sync-wrappers/*.ts",
         "src/types/global.d.ts"
     ],
-    "exclude": [
-        "src/**/*.test.ts"
-    ]
+    "exclude": ["src/**/*.test.ts"]
 }
