refactor(vfs): Migrate vfs-sync-wrappers to TypeScript
- Create migration spec document: docs/development/vfs-sync-wrappers-migration-spec.md
- Migrate implementation from src/jswasm/vfs/opfs/installer/wrappers/vfs-sync-wrappers.mjs to src/jswasm/vfs/opfs/installer/wrappers/vfs-sync-wrappers/vfs-sync-wrappers.ts
- Add unit test file: src/jswasm/vfs/opfs/installer/wrappers/vfs-sync-wrappers.unit.test.ts
- Update src/jswasm/vfs/opfs/installer/index.mjs to import new TypeScript module
- Modify tsconfig.migration.json to support migration

--- a/tsconfig.migration.json
+++ b/tsconfig.migration.json
@@ -54,6 +54,7 @@
         "src/jswasm/vfs/opfs/sqlite3-opfs-async-proxy/*.ts",
         "src/jswasm/vfs/opfs/installer/utils/opfs-util/opfs-util.ts",
         "src/jswasm/vfs/opfs/installer/wrappers/io-sync-wrappers/*.ts",
+        "src/jswasm/vfs/opfs/installer/wrappers/vfs-sync-wrappers/*.ts",
         "src/jswasm/vfs/opfs/installer/wrappers/vfs-integration/vfs-integration.ts",
         "src/types/global.d.ts"
     ],
