--- a/tsconfig.migration.json
+++ b/tsconfig.migration.json
@@ -56,6 +56,7 @@
         "src/jswasm/vfs/opfs/installer/wrappers/io-sync-wrappers/*.ts",
         "src/jswasm/vfs/opfs/installer/wrappers/vfs-sync-wrappers/*.ts",
         "src/jswasm/vfs/opfs/installer/wrappers/vfs-integration/vfs-integration.ts",
+        "src/jswasm/vfs/opfs/installer/utils/worker-message-handler/worker-message-handler.ts",
         "src/types/global.d.ts"
     ],
     "exclude": ["src/**/*.test.ts"]
