refactor(filesystem): Migrate filesystem module from JS to TypeScript with type fixes and modular structure
This commit completes the migration of the filesystem module from JavaScript to TypeScript, addressing type issues and improving module organization.

  - Delete old JavaScript module: `src/jswasm/vfs/filesystem.mjs`
  - Create new TypeScript implementation: `src/jswasm/vfs/filesystem/filesystem.ts`
  - Add E2E tests: `src/jswasm/vfs/filesystem/filesystem.e2e.test.ts`
  - Fix TypeScript type issues across modules:
    - Allow `lookupPath` to return `null` in mount-operations
    - Fix `getStreamChecked` return type in initialization
    - Correct `createDevice` type to function + property in legacy-helpers
    - Update `Module` type to `Partial<EmscriptenModule>` in node-actions
  - Update documentation:
    - Add `docs/development/filesystem-migration-spec.md`
    - Add `docs/development/filesystem-ts-fix-spec.md`
  - Modify `src/jswasm/sqlite3.mjs` to use the new module path
  - Update `tsconfig.migration.json` to include the new files
  - Ensure backward compatibility while improving type safety
  - Refactor module imports to follow TypeScript conventions

--- a/tsconfig.migration.json
+++ b/tsconfig.migration.json
@@ -37,6 +37,7 @@
         "src/jswasm/vfs/filesystem/mount-operations/*.ts",
         "src/jswasm/vfs/filesystem/node-core-operations/*.ts",
         "src/jswasm/vfs/filesystem/node-metadata-operations/*.ts",
+        "src/jswasm/vfs/filesystem/*.ts",
         "src/jswasm/vfs/filesystem/path-operations/*.ts",
         "src/jswasm/vfs/filesystem/stream-helpers/*.ts",
         "src/jswasm/vfs/filesystem/stream-operations/*.ts",
