--- a/tsconfig.migration.json
+++ b/tsconfig.migration.json
@@ -59,9 +59,8 @@
         "src/jswasm/vfs/opfs/installer/wrappers/vfs-integration/vfs-integration.ts",
         "src/jswasm/vfs/opfs/installer/utils/worker-message-handler/worker-message-handler.ts",
         "src/types/global.d.ts",
-        "src/jswasm/vfs/opfs/installer/core/environment-validation/environment-validation.ts"
+        "src/jswasm/vfs/opfs/installer/core/environment-validation/environment-validation.ts",
+        "src/jswasm/vfs/opfs/opfs-sahpool-vfs/opfs-sahpool-vfs.ts"
     ],
-    "exclude": [
-        "src/**/*.test.ts"
-    ]
+    "exclude": ["src/**/*.test.ts"]
 }
