refactor(opfs-vfs-installer): Migrate and refactor OPFS VFS installer module   - Create migration specs and test plans for OPFS installer and operation runner   - Modify core TypeScript files in operation-runner and state-initialization modules   - Restructure installer module by moving and renaming index.ts to installer/index.ts   - Add unit test file for the refactored installer   - Clean up old declaration and JavaScript files   - Update utils and wrappers modules to support refactored structure   - Modify bootstrap and test files to reflect changes

--- a/tsconfig.migration.json
+++ b/tsconfig.migration.json
@@ -60,7 +60,8 @@
         "src/jswasm/vfs/opfs/installer/utils/worker-message-handler/worker-message-handler.ts",
         "src/types/global.d.ts",
         "src/jswasm/vfs/opfs/installer/core/environment-validation/environment-validation.ts",
-        "src/jswasm/vfs/opfs/opfs-sahpool-vfs/opfs-sahpool-vfs.ts"
+        "src/jswasm/vfs/opfs/opfs-sahpool-vfs/opfs-sahpool-vfs.ts",
+        "src/jswasm/vfs/opfs/installer/installer/index.ts"
     ],
     "exclude": ["src/**/*.test.ts"]
 }
