refactor(memfs, docs): Refactor memfs module and update project documentation   - Move memfs from src/jswasm/vfs/ to src/jswasm/vfs/memfs/ directory   - Convert memfs from JavaScript (.mjs) to TypeScript (.ts)   - Update test file path to match new directory structure   - Delete old memfs.d.ts and memfs.mjs files   - Update .clinerules/base_rules.md with revised coding standards   - Update AGENTS.md with repository guidelines   - Update CLAUDE.md with AI agent rules   - Add docs/development/lint-any-cleanup-spec.md   - Modify related vfs and TypeScript configuration files

--- a/tsconfig.migration.json
+++ b/tsconfig.migration.json
@@ -41,6 +41,7 @@
         "src/jswasm/vfs/filesystem/path-operations/*.ts",
         "src/jswasm/vfs/filesystem/stream-helpers/*.ts",
         "src/jswasm/vfs/filesystem/stream-operations/*.ts",
+        "src/jswasm/vfs/memfs/*.ts",
         "src/jswasm/vfs/opfs/async-proxy/logging/*.ts",
         "src/jswasm/vfs/opfs/async-proxy/environment/*.ts",
         "src/jswasm/vfs/opfs/async-proxy/serialization-buffer/*.ts",
