refactor(bindings): migrate core-bindings to TypeScript and improve maintainability
- Convert core-bindings.mjs to TypeScript with proper type definitions
- Extract helper functions for adapter creation and error handling
- Add comprehensive unit tests for core binding functionality
- Document refactor goals and validation plan in spec
- Remove unused core-bindings.d.ts file
- Update import paths from .mjs to .ts in dependent files

--- a/tsconfig.migration.json
+++ b/tsconfig.migration.json
@@ -6,12 +6,14 @@
         "target": "ES2022",
         "moduleResolution": "bundler",
         "allowImportingTsExtensions": false,
+        "skipLibCheck": true,
         "sourceMap": false,
         "declaration": true,
         "declarationMap": false,
         "composite": false
     },
     "include": [
+        "src/jswasm/api/bindings/core-bindings.ts",
         "src/jswasm/utils/async-utils/*.ts",
         "src/jswasm/utils/utf8/*.ts",
         "src/jswasm/utils/memory-utils/*.ts",
