feat(db-statement): migrate binding module to TypeScript
Add TypeScript implementation for statement parameter binding helpers with comprehensive unit tests. Includes strict typing for bind types and improved BigInt handling. The original JavaScript module and its declaration file have been removed.

Update tsconfig to include new binding module path and modify consumer imports to use the new location. Documentation includes migration handover notes and test specifications.

--- a/tsconfig.migration.json
+++ b/tsconfig.migration.json
@@ -64,7 +64,8 @@
         "src/types/global.d.ts",
         "src/jswasm/vfs/opfs/installer/core/environment-validation/environment-validation.ts",
         "src/jswasm/vfs/opfs/opfs-sahpool-vfs/opfs-sahpool-vfs.ts",
-        "src/jswasm/vfs/opfs/installer/installer/index.ts"
+        "src/jswasm/vfs/opfs/installer/installer/index.ts",
+        "src/jswasm/api/oo1-db/db-statement/binding/*.ts"
     ],
     "exclude": ["src/**/*.test.ts"]
 }
