feat(database): add database migration spec and update tsconfig
Add database migration specification document detailing API surface, test strategy, and type definitions. Include database-related files in tsconfig.migration.json and fix columnNames assignment in database.mjs.

--- a/tsconfig.migration.json
+++ b/tsconfig.migration.json
@@ -65,7 +65,8 @@
         "src/jswasm/vfs/opfs/installer/core/environment-validation/environment-validation.ts",
         "src/jswasm/vfs/opfs/opfs-sahpool-vfs/opfs-sahpool-vfs.ts",
         "src/jswasm/vfs/opfs/installer/installer/index.ts",
-        "src/jswasm/api/oo1-db/db-statement/binding/*.ts"
+        "src/jswasm/api/oo1-db/db-statement/binding/*.ts",
+        "src/jswasm/api/oo1-db/db-statement/database/*.ts"
     ],
     "exclude": ["src/**/*.test.ts"]
 }
