--- a/tsconfig.migration.json
+++ b/tsconfig.migration.json
@@ -12,10 +12,6 @@
         "declarationMap": false,
         "composite": false
     },
-    "include": [
-        "src/**/*.ts"
-    ],
-    "exclude": [
-        "src/**/*.test.ts"
-    ]
+    "include": ["src/**/*.ts"],
+    "exclude": ["src/**/*.test.ts"]
 }
