--- a/tsconfig.migration.json
+++ b/tsconfig.migration.json
@@ -3,15 +3,33 @@
     "compilerOptions": {
         "noEmit": false,
         "module": "ESNext",
-        "target": "ES2022",
-        "moduleResolution": "bundler",
-        "allowImportingTsExtensions": false,
+        "target": "ES2020",
+        "moduleResolution": "node",
+        "esModuleInterop": true,
+        "strict": true,
         "skipLibCheck": true,
-        "sourceMap": false,
+        "forceConsistentCasingInFileNames": true,
+        "outDir": "./dist",
+        "rootDir": "./src",
         "declaration": true,
-        "declarationMap": false,
+        "declarationMap": true,
+        "sourceMap": true,
+        "removeComments": false,
+        "noImplicitAny": true,
+        "strictNullChecks": true,
+        "strictFunctionTypes": true,
+        "noImplicitThis": true,
+        "noImplicitReturns": true,
+        "noFallthroughCasesInSwitch": true,
+        "noUncheckedIndexedAccess": true,
+        "noImplicitOverride": true,
+        "allowUnreachableCode": false,
+        "allowUnusedLabels": false,
+        "exactOptionalPropertyTypes": true,
+        "noPropertyAccessFromIndexSignature": true,
+        "allowImportingTsExtensions": false,
         "composite": false
     },
-    "include": ["src/**/*.ts"],
-    "exclude": ["src/**/*.test.ts"]
+    "include": ["src/**/*.ts", "src/**/*.d.ts"],
+    "exclude": ["node_modules", "dist", "**/*.spec.ts", "**/*.test.ts", "**/tests/**/*"]
 }
