--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     },
     "scripts": {
         "test": "npm run build && npm run test:e2e",
-        "http": "tsx scripts/http-service.ts ./dist --port 8399",
+        "http": "tsx scripts/http-service.ts ./ --port 8399",
         "test:e2e": "vitest run --config vitest.e2e.config.ts",
         "test:debug": "vitest run --config vitest.e2e.config.ts --no-file-parallelism",
         "build": "vite build",
@@ -43,6 +43,7 @@
         "typescript": "^5.9.3",
         "typescript-eslint": "^8.49.0",
         "vite": "^7.2.7",
+        "vite-plugin-dts": "^4.5.4",
         "vitest": "^4.0.15"
     },
     "repository": {
