--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
         }
     },
     "scripts": {
-        "test": "npm run build && npm run test:e2e",
+        "test": "npm run build && npm run test:e2e && npm run test:server",
         "http": "tsx scripts/http-service.ts ./ --port 8399",
         "test:e2e": "vitest run --config vitest.e2e.config.ts",
+        "test:server": "vitest run tests/e2e/server.test.ts --environment node",
         "test:debug": "vitest run --config vitest.e2e.config.ts --no-file-parallelism",
         "build": "vite build",
         "build:watch": "vite build --watch",
