feat: add sqlite3 type declarations and improve worker initialization
- Add comprehensive type declarations for sqlite3 WASM/JS bundle
- Enhance worker initialization with promise-based messaging
- Update package name and clean up gitignore
- Improve test reliability and error handling
- Refactor main.ts to handle worker communication more robustly

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,10 +6,7 @@
             "request": "launch",
             "name": "Debug Current Test File",
             "autoAttachChildProcesses": true,
-            "skipFiles": [
-                "<node_internals>/**",
-                "**/node_modules/**"
-            ],
+            "skipFiles": ["<node_internals>/**", "**/node_modules/**"],
             "program": "${workspaceRoot}/node_modules/vitest/vitest.mjs",
             "args": [
                 "run",
@@ -33,10 +30,7 @@
                 "--no-file-parallelism"
             ],
             "autoAttachChildProcesses": true,
-            "skipFiles": [
-                "<node_internals>/**",
-                "**/node_modules/**"
-            ],
+            "skipFiles": ["<node_internals>/**", "**/node_modules/**"],
             "smartStep": true,
             "console": "integratedTerminal"
         }
