--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@wuchuheng/web-sqlite",
+    "name": "web-sqlite.js",
     "version": "1.0.0",
     "description": "",
     "private": true,
