refactor: Update typecheck command and improve database handling in worker
- Update `typecheck` in package.json to use `tsc --noEmit` (type checks without file emission)
- Refactor `src/main.ts`:
  - Rename `start` to `openDB` with filename parameter support
  - Implement auto-incrementing message IDs and promise mapping for worker communication
  - Introduce DB state management (open/closed)
- Update `samples/index.html` to use the new `openDB` API and log success message
- Add `src/types/message.d.ts` for type-safe worker message structures

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
         "build:watch": "vite build --watch",
         "lint": "eslint . --ext .ts,.js,.mjs --fix; npm run typecheck && npm run format",
         "lint:tmp": "eslint src/tmp --ext .ts,.js,.mjs --fix; npm run typecheck src/tmp && npm run format",
-        "typecheck": "tsc --strict --noImplicitAny ",
+        "typecheck": "tsc --noEmit",
         "format": "prettier --ignore-path .gitignore --write ."
     },
     "devDependencies": {
