--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,12 @@
 {
     "compilerOptions": {
         "target": "ESNext",
-        "lib": ["ESNext", "DOM", "DOM.Iterable", "WebWorker"],
+        "lib": [
+            "ESNext",
+            "DOM",
+            "DOM.Iterable",
+            "WebWorker"
+        ],
         "module": "ESNext",
         "skipLibCheck": true,
         "moduleResolution": "bundler",
@@ -20,9 +25,13 @@
         "forceConsistentCasingInFileNames": true,
         "allowSyntheticDefaultImports": true,
         "baseUrl": ".",
-        "types": ["vite/client"],
+        "types": [
+            "vite/client"
+        ],
         "paths": {
-            "@/*": ["src/*"]
+            "@/*": [
+                "src/*"
+            ]
         }
     },
     "include": [
@@ -33,5 +42,8 @@
         "vitest.config.ts",
         "src/sqlite3.d.mts"
     ],
-    "exclude": ["node_modules", "dist"]
+    "exclude": [
+        "node_modules",
+        "dist"
+    ]
 }
