test(e2e): add a test case for openDB api from web-sqlite-js libary

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "web-sqlite.js",
+    "name": "web-sqlite-js",
     "version": "1.0.0",
     "description": "",
     "private": true,
