feat(worker-bridge): extract worker bridge and wire main startup
- Add `createWorkerBridge` in src/worker-bridge.ts to centralize worker
  messaging, request id mapping, and lifecycle (resolve/reject/terminate).
- Update src/main.ts to consume the new worker bridge and simplify
  worker interaction/boot sequence.
- Adjust package.json metadata/scripts to reflect changes and ensure
  test/build compatibility with the new bridge.

--- a/package.json
+++ b/package.json
@@ -13,11 +13,10 @@
         }
     },
     "scripts": {
-        "test": "npm run build && npm run test:e2e && npm run test:server",
+        "test": "npm run build && npm run test:e2e",
         "test:unit": "vitest run --config vitest.unit.config.ts --coverage",
         "http": "tsx scripts/http-service.ts ./ --port 8399",
         "test:e2e": "vitest run --config vitest.e2e.config.ts",
-        "test:server": "vitest run tests/e2e/server.test.ts --environment node",
         "test:debug": "vitest run --config vitest.e2e.config.ts --no-file-parallelism",
         "build": "vite build",
         "build:watch": "vite build --watch",
