feat(api): add DB API spec, types, worker bridge updates, and E2E tests
- docs: add DB API specification (docs/db-api-spec.md)
- feat(types): add DB interface types (src/types/DB.ts) and rename message types (src/types/message.ts)
- feat(worker): update worker bridge and worker handling (src/worker-bridge.ts, src/worker.ts)
- test(e2e): add E2E tests for exec/run/error flows
- chore: update package.json and main entry wiring (package.json, src/main.ts)

--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
         }
     },
     "scripts": {
-        "test": "npm run build && npm run test:e2e",
+        "test": "npm run lint && npm run build && npm run test:e2e",
         "test:unit": "vitest run --config vitest.unit.config.ts --coverage",
         "http": "tsx scripts/http-service.ts ./ --port 8399",
         "test:e2e": "vitest run --config vitest.e2e.config.ts",
         "test:debug": "vitest run --config vitest.e2e.config.ts --no-file-parallelism",
-        "build": "vite build",
+        "build": "vite build ",
         "build:watch": "vite build --watch",
         "lint": "eslint . --ext .ts --fix; npm run typecheck && npm run format",
         "typecheck": "tsc --noEmit",
