feat(worker): add logger util and extend worker message types
- Add a lightweight SQL logger utility and export `configureLogger`.
- Extend worker message types and runtime types to include CLOSE and updated
  open/exec payloads.
- Wire logging into worker and main thread initialization paths.
- Update E2E tests (error/exec/run) to assert new behaviors and logging-aware
  flows.
- Adjust Vitest E2E config and package.json scripts to support browser-based
  E2E runs.

Files changed:
- Added: src/utils/logger.ts (exports `configureLogger`)
- Modified: src/types/message.ts (adds/updates [`SqliteEvent`](src/types/message.ts))
- Modified: src/jswasm/sqlite3.d.ts (type surface updates, e.g. [`Sqlite3`](src/jswasm/sqlite3.d.ts))
- Modified: src/worker.ts (integrate logger + message handling)
- Modified: src/main.ts (main thread wiring)
- Modified: tests/e2e/error.e2e.test.ts
- Modified: tests/e2e/exec.e2e.test.ts
- Modified: tests/e2e/run.e2e.test.ts
- Modified: vitest.e2e.config.ts
- Modified: package.json

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         }
     },
     "scripts": {
-        "test": "npm run lint && npm run build && npm run test:e2e",
+        "test": "npm run build && npm run lint && npm run test:e2e",
         "test:unit": "vitest run --config vitest.unit.config.ts --coverage",
         "http": "tsx scripts/http-service.ts ./ --port 8399",
         "test:e2e": "vitest run --config vitest.e2e.config.ts",
