--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
         "typecheck": "tsc --noEmit",
         "format": "prettier --ignore-path .gitignore --write .",
         "package:compress": "npm pack",
-        "package:publish": "npm run test && npm run build && npm publish --access public"
+        "package:publish": "npm run test && npm run build && npm publish --access public",
+        "docs:dev": "vitepress dev docs",
+        "docs:build": "vitepress build docs",
+        "docs:preview": "vitepress preview docs"
     },
     "files": [
         "dist",
-        "LICENSE",
         "README.md"
     ],
     "devDependencies": {
@@ -62,6 +64,7 @@
         "typescript-eslint": "^8.49.0",
         "vite": "^7.2.7",
         "vite-plugin-dts": "^4.5.4",
+        "vitepress": "^1.6.4",
         "vitest": "^4.0.15"
     },
     "repository": {
