--- a/docs/package.json
+++ b/docs/package.json
@@ -9,8 +9,15 @@
         "preview": "vitepress preview ."
     },
     "devDependencies": {
-        "vitepress": "^1.6.4",
+        "@types/node": "^25.0.1",
         "typescript": "^5.9.3",
-        "@types/node": "^25.0.1"
+        "vitepress": "^1.6.4"
+    },
+    "dependencies": {
+        "@codemirror/autocomplete": "^6.20.0",
+        "@codemirror/lang-sql": "^6.10.0",
+        "@codemirror/state": "^6.5.2",
+        "@codemirror/view": "^6.39.4",
+        "codemirror": "^6.0.2"
     }
 }
